# ffgl-solid-plugin

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
source/plugins/SolidColor/: SolidColor.cpp  SolidColor.h
